# CLINITY

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  app.py  create_test_image.py  pyproject.toml  requirements.txt  test_full_pipeline.py  test_medgemma.py  test_medgemma_vision.py  test_production_pipeline.py  test_real_handover.py  test_vision_pipeline.py
.claude/: settings.local.json
src/: __init__.py  config.py  main.py  models.py
src/compiler/: __init__.py  compiler.py  medgemma.py  multipass.py  safety.py
src/ingestion/: __init__.py  audio.py  ocr.py  text.py  vision.py
test_data/: lab_results.txt  nursing_handover.txt  output_snapshot.md  production_output.md  radiology_report.txt  vision_pipeline_output.md  ward_round_note.txt
